# spa-customer-care-platform

./: .gitignore  back-end - Shortcut.lnk  commands.md  run.sh
back-end/: .env.example  .gitignore  FINAL_IMPLEMENTATION_REPORT.md  GEMINI.md  IMPLEMENTATION_MEDIA.md  IMPLEMENTATION_SUMMARY.md  MEDIA_MODULE_SUMMARY.md  MEDIA_USAGE_GUIDE.md  README.md  README_IMPLEMENTATION.md  alembic.ini  pyproject.toml  requirements.txt
back-end/.github/instructions/: back-end.instructions.md  clean-code.instructions.md
back-end/alembic/: env.py
back-end/alembic/versions/: 0a452aba41ed_delete_field_username.py  0bd3cf57a1a9_create_service_and_category_tables.py  0d3374933ea8_init.py  1271cb2c6614_refactor_user_customer_structure_v4.py  179d2244ce89_fix_customer_models.py  1daab9c22411_initial_schema_setup.py  20251016_195831_e6f6753dc11e_create_initial_tables.py  20251016_204457_1e8c2b6f3759_implementation_email.py  20251016_210000_3c8d9a2b5f1e_create_customer_table.py  2df69e15f2a7_init.py  (+25 more)
back-end/app/: main.py
back-end/docs/: AUTH_API_GUIDE.md  CATALOG_API_GUIDE.md  CUSTOMERS_API_GUIDE.md  DOCUMENTATION.md  INDEX.md  MEDIA_API_GUIDE.md  PRODUCT_BRIEF.md
back-end/scripts/: alembic_helper.sh
back-end/src/: __init__.py  main.py
back-end/tests/: conftest.py  services_api.py  test_advanced_logic.py  test_catalog_api.py  test_customers_api.py  test_images_api.py  test_product_images.py  test_products_api.py  test_roles_api.py  test_schedules_api.py  test_schema_list_defaults.py  test_services_api.py  test_staff_api.py  test_treatment_plans_api.py  test_users_and_auth_api.py
(+571 files in other folders)
